--- a/src/styles/ContactSection.module.css
+++ b/src/styles/ContactSection.module.css
@@ -1,5 +1,6 @@
 .contactSection {
     padding-top: 50px;
+    padding-bottom: 50px;
     background-color: #4417C1;
     color: white;
     text-align: center;
