--- a/src/styles/TargetMarketSection.module.css
+++ b/src/styles/TargetMarketSection.module.css
@@ -1,13 +1,6 @@
 .targetMarketSection {
     padding: 4rem 2rem;
-    background-color: #f8f9fa;
-}
-
-.sectionTitle {
-    font-size: 2.5rem;
-    color: #4417C1;
-    text-align: center;
-    margin-bottom: 2rem;
+    background-color: #F1E6D8;
 }
 
 .contentWrapper {
@@ -19,7 +12,7 @@
 }
 
 .infoCard {
-    background-color: white;
+    background-color: #fdfcf3;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     padding: 1.5rem;
@@ -36,6 +29,7 @@
     margin-bottom: 1rem;
     border-bottom: 2px solid #ff8000;
     padding-bottom: 0.5rem;
+    text-align: center;
 }
 
 .infoCard ul {
@@ -47,6 +41,7 @@
     margin-bottom: 0.5rem;
     padding-left: 1.5rem;
     position: relative;
+    font-size: 1.2rem;
 }
 
 .infoCard li::before {
@@ -57,17 +52,13 @@
     font-size: 1.2rem;
 }
 
-.marketSizeItem {
+.iconWrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
-    font-size: 1rem;
-}
-
-.marketSizeValue {
-    font-weight: bold;
     color: #4417C1;
+    font-size: 1.8rem;
 }
 
 @media (max-width: 768px) {
@@ -78,17 +69,9 @@
     .infoCard h3 {
         font-size: 1.3rem;
     }
-
-    .infoCard li, .marketSizeItem {
-        font-size: 0.9rem;
-    }
 }
 
 @media (max-width: 480px) {
-    .targetMarketSection {
-        padding: 3rem 1rem;
-    }
-
     .sectionTitle {
         font-size: 1.8rem;
     }
