--- a/src/styles/CompetitorsSection.module.css
+++ b/src/styles/CompetitorsSection.module.css
@@ -1,18 +1,11 @@
 .competitorsSection {
     padding: 4rem 2rem;
-    background-color: #f8f9fa;
-}
-
-.sectionTitle {
-    font-size: 2.5rem;
-    color: #4417C1;
-    text-align: center;
-    margin-bottom: 2rem;
+    background-color: #F1E6D8;
 }
 
 .tableWrapper {
     overflow-x: auto;
-    width: 70%;
+    width: 65%;
     margin: 0 auto;
 }
 
@@ -43,6 +36,10 @@
     background-color: #4417C1;
     color: white;
     font-weight: bold;
+}
+
+.competitorsTable tr:nth-child(odd) {
+    background-color: white;
 }
 
 .competitorsTable tr:nth-child(even) {
