--- a/src/styles/ProblemSolutionSection.module.css
+++ b/src/styles/ProblemSolutionSection.module.css
@@ -1,13 +1,6 @@
 .problemSolutionSection {
     padding: 4rem 2rem;
-    background-color: #f8f9fa;
-}
-
-.sectionTitle {
-    font-size: 2.5rem;
-    color: #4417C1;
-    text-align: center;
-    margin-bottom: 3rem;
+    background-color: #F1E6D8;
 }
 
 .container {
@@ -36,7 +29,7 @@
 .item {
     display: flex;
     align-items: center;
-    background-color: white;
+    background-color: #fdfcf3;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     padding: 1.5rem;
@@ -67,21 +60,9 @@
     flex: 1;
 }
 
-.content h3 {
-    font-size: 1.2rem;
-    color: #4417C1;
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-    transition: color 0.3s ease;
-}
-
-.item:hover .content h3 {
-    color: #5a2de0;
-}
-
 .content p {
-    font-size: 1rem;
-    color: #555;
+    font-size: 1.2rem;
+    color: #666;
     margin-bottom: 0;
 }
 
