--- a/src/styles/TimingSection.module.css
+++ b/src/styles/TimingSection.module.css
@@ -1,14 +1,7 @@
 .timingSection {
     padding: 4rem 2rem;
-    background-color: #f8f9fa;
+    background-color: #F1E6D8;
     color: black;
-}
-
-.sectionTitle {
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: #4417C1;
 }
 
 .timingContainer {
@@ -21,7 +14,7 @@
 }
 
 .timingItem {
-    background-color: white;
+    background-color: #fdfcf3;
     border-radius: 10px;
     padding: 1.5rem;
     display: flex;
@@ -39,11 +32,11 @@
 .timingIcon {
     font-size: 1.5rem;
     margin-right: 1rem;
-    color: #ff8000;
+    color: #4417C1;
 }
 
 .timingItem p {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     margin: 0;
 }
 
