--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,22 +1,44 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #fff;
+    background-color: #F1E6D8;
     color: #333;
 }
 
+h1 {
+    color: #4417C1 !important;
+    font-size: 5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
 h2 {
-    color: #4417C1;
+    color: #333 !important;
+    font-size: 5rem;
+    text-align: center;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
 }
 
-button {
-    background-color: #ff8000;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
+h3 {
+    font-size: 4.5rem;
+    font-weight: 600;
+    color: #333;
 }
 
-button:hover {
-    background-color: #4417C1;
+p {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    color: #666;
+}
+
+@media (max-width: 768px) {
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+    
 }
