--- a/src/styles/MarketSize.module.css
+++ b/src/styles/MarketSize.module.css
@@ -6,6 +6,7 @@
 .description {
     /* Add styles for the p element */
     margin-inline: 25vh; /* Space between text and image */
+    font-size: 1.2rem;
 }
 
 .image {
